# Programming_Assignment

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/bingo/: __main__.py  app.py  balls.py  card.py  gui_tk.py  result.py
tests/: test_balls.py  test_card.py  test_result.py
