[project]
name = "bingo"
version = "0.0.1"
description = "Bingo game assignment"
readme = "README.md"
requires-python = ">=3.11,<=3.13.1"

[project.scripts]
bingo = "bingo.__main__:main"  # `python -m bingo` / `bingo` で実行できる

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]